
plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13

repositories {
    jcenter()
}

dependencies {
}

application {
    mainClassName = 'org.przybyl.ddj13.App'
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    jvmArgs '--enable-preview'
}

run.jvmArgs += ['--enable-preview']

